<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lotw</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="admob_id">ca-app-pub-1729692215931782~9697155333</string>
    <string name="rewarded">ca-app-pub-1729692215931782/9201443260</string>
    <string name="admob_banner">ca-app-pub-1729692215931782/5802783601</string>

    <string name="description"> raaris es? </string>
    <string name="textnugo" />
    <string name="TRAKI">GET 10 GOLD-WATCH THE ADVERTISEMENT</string>
    <string name="GAXSNA">CORRECT LETTERS 10 GOLD</string>
    <string name="WASHLA">Do you want to remove a incorrect letter for 2 coins?</string>
    <string name="sworia">BRAVO</string>
    <string name="yochagshengamoicani">You have guessed!</string>
    <string name="reklamiskureba">+5 COINS</string>
    <string name="shemdegi">CONTINUE</string>
    <string name="diakh">AYE</string>
    <string name="dawyeba">PLAY</string>
    <string name="gaziareba">SHARE</string>
    <string name="shepaseba">RATE</string>
    <string name="CREATEDBY">
           </string>

    <string name="damexmaret">Created by inst:njaparidze_</string>
    <string name="admob_app_id">ca-app-pub-1729692215931782~8271504978</string>



    <string name="font">napoleon</string>
</resources>
