<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout16"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sworia"

        android:textColor="#54AA0B"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <TextView

        android:id="@+id/tvLevel0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yochagshengamoicani"
        android:textColor="#54AA0B"
        android:textSize="@dimen/_18sdp"

        android:textStyle="bold"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/textView1" />

    <View
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/transparent"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/tvLevel0" />

    <View
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        ads:layout_constraintLeft_toLeftOf="@+id/textView3"
        ads:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/sollution_butoon"
        android:fontFamily="@font/thrones"
        android:textAllCaps="true"
        android:textColor="@color/color_sun_flower"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/textView4" />

    <LinearLayout
        android:id="@+id/ll_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:weightSum="3"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/textView4">


        <GridView
            android:id="@+id/gvContinue"
            android:layout_width="0dp"
            android:layout_height="@dimen/_126sdp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:columnWidth="32dp"
            android:listSelector="@android:color/transparent"
            android:numColumns="20"
            android:stretchMode="columnWidth">

        </GridView>
    </LinearLayout>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_26sdp"
        android:background="@mipmap/ic_launcher_round"
        android:fontFamily="@font/thrones"
        android:gravity="center"
        android:text=""
        android:textColor="#54AA0B"
        android:textSize="@dimen/_20sdp"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <!-- set Banner ad position in UI layout design -->


    <TextView
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="@dimen/_37sdp"
        android:background="@drawable/wallpaper_butoon"
        android:gravity="center"
        android:text="@string/shemdegi"
        android:textColor="@color/color_clouds"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"

        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>